--- a/react-app/memory_game/src/style/MemoryGame.css
+++ b/react-app/memory_game/src/style/MemoryGame.css
@@ -1,74 +1,90 @@
+/* MemoryGame.css */
+
+
 .MemoryGame {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 100vh;
-  }
-  
-  .game-info {
-    margin-bottom: 20px;
-    font-size: 24px;
-  }
-  
-  .cards {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center; /* Center the cards horizontally */
-    width: 400px;
-  }
-  
-  .card {
-    width: 10vw; /* Adjust width to maintain consistency */
-    height: 10vw; /* Adjust height to maintain consistency */
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border: 1px solid white;
-    cursor: pointer;
-    transition: transform 0.6s;
-    transform-style: preserve-3d;
-    font-size: 3vw; /* Adjust font size relative to card size */
-  }
-  
-  
-  .card-inner {
-    width: 100%;
-    height: 100%;
-    transition: transform 0.6s;
-    transform-style: preserve-3d;
-  }
-  
-  .card.flipped .card-inner {
-    transform: rotateY(180deg);
-  }
-  
-  .card-front,
-  .card-back {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 24px;
-    backface-visibility: hidden;
-    border-radius: 8px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-  }
-  
-  .card-front {
-    background-color: #ccc;
-  }
-  
-  .card-back {
-    background-color: #fff;
-  }
-  
-  .card.solved .card-inner {
-    pointer-events: none;
-  }
-  
-  .points {
-    font-size: 20px;
-    margin-top: 20px;
-  }
-  
+  display: flex;
+  flex-direction: column;
+  flex-wrap:wrap;
+  align-items: center;
+  justify-content: center;
+  margin: auto;
+  width:fit-content;
+  min-height: 100vh;
+  background-image: linear-gradient(to bottom right, #666160, #211512);
+  color: #ffffff;
+  padding: 20px;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3);
+  text-align: center; /* Centrēt tekstu */
+}
+
+.gameInfo {
+  margin-bottom: 20px;
+  font-size: 24px;
+}
+
+.cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 400px;
+}
+
+.card {
+  width: 100px;
+  height: 100px;
+  perspective: 1000px;
+  margin: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+  font-size: 3vw;
+  border-radius: 8px; /* Add border radius for a rounded look */
+}
+
+.card-inner {
+  width: 100%;
+  height: 100%;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+}
+
+.card.flipped .card-inner {
+  transform: rotateY(180deg);
+}
+
+.card .card-inner .card-front,
+.card .card-inner .card-back {
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 24px;
+}
+
+.card .card-inner .card-back {
+  transform: rotateY(180deg);
+}
+
+.card-front {
+  background-color: #fafafa; /* Set front face background color */
+}
+
+.card-back {
+  background-color: #424242; /* Set back face background color */
+  color: #ffffff; /* Set text color for card back */
+}
+
+.card.solved .card-inner {
+  pointer-events: none;
+}
+
+.points {
+  font-size: 20px;
+  margin-top: 20px;
+}
