--- a/react-app/memory_game/src/style/Leaderboard.css
+++ b/react-app/memory_game/src/style/Leaderboard.css
@@ -33,4 +33,9 @@
   .leaderboard li:nth-child(even) {
     background-color: #f0f0f0; /* Alternate background color for better readability */
   }
+
+  .leaderboard-container{
+    width:100%;
+    height:100%;
+  }
   
