--- a/react-app/memory_game/src/style/Leaderboard.css
+++ b/react-app/memory_game/src/style/Leaderboard.css
@@ -1,41 +1,41 @@
-/* Leaderboard.css */
+.leaderboard-container {
+  background-color: #f5f5f5; /* Default background color */
+  width: 100%;
+  height: 100vh; /* Full viewport height */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-.leaderboard {
-    background-color: #f5f5f5;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3);
-    width: 400px;
-    margin: 0 auto;
-  }
-  
-  .leaderboard h1 {
-    text-align: center;
-    font-size: 24px;
-    margin-bottom: 20px;
-  }
-  
-  .leaderboard ol {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-  }
-  
-  .leaderboard li {
-    margin-bottom: 10px;
-    font-size: 18px;
-    background-color: #ffffff;
-    padding: 10px;
-    border-radius: 8px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-  }
-  
-  .leaderboard li:nth-child(even) {
-    background-color: #f0f0f0; /* Alternate background color for better readability */
-  }
+.leaderboard-content {
+  background-color: inherit; /* Inherit background color from the container */
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3);
+  width: 400px;
+}
 
-  .leaderboard-container{
-    width:100%;
-    height:100%;
-  }
-  
+.leaderboard h1 {
+  text-align: center;
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+.leaderboard ol {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.leaderboard li {
+  margin-bottom: 10px;
+  font-size: 18px;
+  background-color: #ffffff;
+  padding: 10px;
+  border-radius: 8px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+.leaderboard li:nth-child(even) {
+  background-color: #f0f0f0; /* Alternate background color for better readability */
+}
