--- a/react-app/memory_game/src/style/ProfilePage.css
+++ b/react-app/memory_game/src/style/ProfilePage.css
@@ -1,53 +1,51 @@
-/* ProfilePage.css */
-
 .ProfilePage {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 40px;
-  }
-  
-  .ProfileCard {
-    display: flex;
-    align-items: center;
-  }
-  
-  .ProfilePicture {
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-    object-fit: cover;
-    margin-right: 20px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-  }
-  
-  .ProfileInfo {
-    flex: 1;
-  }
-  
-  .ProfileInfo h2 {
-    font-size: 24px;
-    margin-bottom: 10px;
-    color: #333;
-  }
-  
-  .ProfileInfo p {
-    font-size: 16px;
-    margin-bottom: 5px;
-    color: #555;
-  }
-  
-  .ProfileInfo a {
-    display: inline-block;
-    padding: 10px 20px;
-    background-color: #007bff;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    text-decoration: none;
-    transition: background-color 0.3s ease;
-  }
-  
-  .ProfileInfo a:hover {
-    background-color: #0056b3;
-  }
-  
+  position: relative;
+  display: flex;
+  justify-content: center;
+}
+
+.background-body {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #ffffff; /* Set the background color here */
+  z-index: -1;
+}
+
+.ProfileCard {
+  background-color: transparent; /* Set the card background to transparent */
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3);
+}
+
+.ProfileInfo {
+  text-align: center;
+}
+
+.edit-profile {
+  text-decoration: none;
+  background-color: rgba(255, 255, 255, 0.3); /* Semi-transparent white background */
+  padding: 5px 10px;
+  border-radius: 5px;
+  color: black;
+  margin-top: 10px;
+  display: inline-block;
+  transition: background-color 0.3s ease;
+}
+
+.edit-profile:hover {
+  background-color: rgba(255, 255, 255, 0.5); /* Semi-transparent white background on hover */
+}
+
+.background-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #ffffff; /* Set your desired background color here */
+  z-index: -2; /* Ensure it is behind all other content */
+}
